--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,6 +8,20 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/video.css" />
 </head>
+
 <body>
+    <header>
+        <a href="#">
+            <img src="images/icons/site-logo.svg" alt="YouTube CSS Clone Logo">
+        </a>
+        <h1>YouTube Clone</h1>
+        <img class="search-videos-icon" src="images/icons/search.svg" alt="Search Videos">
+        <img class="settings-icon" src="images/icons/menu.svg" alt="Settings">
+    </header>
 </body>
+
+<main>
+    Main section
+</main>
+
 </html>
