--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 </body>
 
 <main>
-    Main section
+    <div class="video-thumbnail">Video Thumbnail</div>
+    <section class="video-details">Video Details</section>
+    <aside class="related-videos">Related Videos</aside>
+    <section class="video-comments">Comments</section>
 </main>
 
 </html>
