Added video thumbnail image to markup.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 </body>
 
 <main>
-    <div class="video-thumbnail">Video Thumbnail</div>
+    <div class="video-thumbnail">
+        <img src="images/videos/main-video.png" alt="Studio filming">
+    </div>
     <section class="video-details">Video Details</section>
     <aside class="related-videos">Related Videos</aside>
     <section class="video-comments">Comments</section>
