Added video details markup and styles.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,36 @@
 
 <main>
     <div class="video-thumbnail">
-        <img src="images/videos/main-video.png" alt="Studio filming">
+        <img src="images/videos/main-video.png" alt="Studio filming and production">
     </div>
-    <section class="video-details">Video Details</section>
+    <section class="video-details">
+        <header>
+            <h2 class="video-details__title">Studio Filming & Production</h2>
+            <div class="video-details__views-count">43 Views</div>
+        </header>
+        <div class="cta-container">
+            <div class="cta-item active">
+                <img src="images/icons/thumbs-up-blue.svg" alt="Thumbs up">
+                <p class="cta-item__title">13</p>
+            </div>
+            <div class="cta-item">
+                <img src="images/icons/thumbs-down-default.svg" alt="Thumbs down">
+                <p class="cta-item__title">0</p>
+            </div>
+            <div class="cta-item">
+                <img src="images/icons/share-default.svg" alt="Share">
+                <p class="cta-item__title">Share</p>
+            </div>
+            <div class="cta-item">
+                <img src="images/icons/save-default.svg" alt="Save">
+                <p class="cta-item__title">Save</p>
+            </div>
+            <div class="cta-item">
+                <img src="images/icons/report-default.svg" alt="Report">
+                <p class="cta-item__title">Report</p>
+            </div>
+        </div>
+    </section>
     <aside class="related-videos">Related Videos</aside>
     <section class="video-comments">Comments</section>
 </main>
