Added channel details markup to video details section. Styled channel details.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
                 <p class="cta-item__title">Report</p>
             </div>
         </div>
+        <div class="channel-details">
+            <a href="#">
+                <img src="images/profiles/how-to-anything.png" alt="How To Anything">
+                <div class="channel-metadata">
+                    <h3 class="channel-metadata__channel-name">How To Anything</h3>
+                    <div class="channel-metadata__channel-subscriber-count">1.5k Subscribers</div>
+                </div>
+            </a>
+            <button>
+                <img src="images/icons/site-logo-blue.svg" alt="Subscribe">
+                <span>Subscribe</span>
+            </button>
+        </div>
     </section>
     <aside class="related-videos">Related Videos</aside>
     <section class="video-comments">Comments</section>
