Added markup and styles for related videos autoplay section.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@
             </button>
         </div>
     </section>
-    <aside class="related-videos">Related Videos</aside>
+    <aside class="related-videos">
+        <header>
+            <div>Up Next</div>
+            <div>Autoplay</div>
+            <button>
+                <span class="autoplay-slider"></span>
+                <span class="autoplay-slider-toggle-button"></span>
+            </button>
+        </header>
+    </aside>
     <section class="video-comments">Comments</section>
 </main>
 
