Created markup and styles for related videos section.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="channel-metadata__channel-subscriber-count">1.5k Subscribers</div>
                 </div>
             </a>
-            <button>
+            <button aria-label="subscribe-button">
                 <img src="images/icons/site-logo-blue.svg" alt="Subscribe">
                 <span>Subscribe</span>
             </button>
@@ -69,11 +69,142 @@
         <header>
             <div>Up Next</div>
             <div>Autoplay</div>
-            <button>
+            <button aria-label="autoplay-button">
                 <span class="autoplay-slider"></span>
                 <span class="autoplay-slider-toggle-button"></span>
             </button>
         </header>
+        <ul>
+            <li>
+                <a href="#" title="Top funny moments of 2020">
+                    <article>
+                        <img src="images/videos/try-not-to-laugh.png" alt="Woman laughing hysterically on the ground">
+                        <h4>Top funny moments of 2020</h4>
+                        <p>Viral Feed</p>
+                        <p>22k Views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Lets learn Bootstrap and HTML">
+                    <article>
+                        <img src="images/videos/lets-learn-bootstrap.png" alt="Computer screen showing HTML code." />
+                        <h4>Lets learn Bootstrap and HTML</h4>
+                        <p>The UI Legend</p>
+                        <p>1K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="How to set up this gaming desktop environment, and how to do it cheaply.">
+                    <article>
+                        <img src="images/videos/build-desktop-environment.png"
+                            alt="Dark room with 2 big desktop monitors side by side and a gaming keyboard." />
+                        <h4>How to set up this gaming desktop environment, and how to do it cheaply.</h4>
+                        <p>How To Anything</p>
+                        <p>41K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Best programs for tree shaking and minify your javascript code">
+                    <article>
+                        <img src="images/videos/minify-javascript.png"
+                            alt="Computer screen showing minified javascript code." />
+                        <h4>Best programs for tree shaking and minify your javascript code</h4>
+                        <p>How To Anything</p>
+                        <p>2K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Why I think learning Python in 2021 is important">
+                    <article>
+                        <img src="images/videos/learning-python.png"
+                            alt="Someone sitting in a yellow chair with a laptop in their lap and an instruction book on the Python coding language next to them." />
+                        <h4>Why I think learning Python in 2021 is important</h4>
+                        <p>DevOps Guru</p>
+                        <p>25K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Why writing blogs can help your career">
+                    <article>
+                        <img src="images/videos/writing-blogs.png"
+                            alt="Someone sitting at a typewriter with a piece of paper hanging out that says 'Blog'." />
+                        <h4>Why writing blogs can help your career</h4>
+                        <p>Advice Girl</p>
+                        <p>96K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Best way to edit your own videos">
+                    <article>
+                        <img src="images/videos/edit-videos.png"
+                            alt="A dimly lit home office that shows 3 big desktop monitors with video editing software on them." />
+                        <h4>Best way to edit your own videos</h4>
+                        <p>How To Anything</p>
+                        <p>255K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Preparing for job interviews">
+                    <article>
+                        <img src="images/videos/good-clients.png"
+                            alt="A man and woman are shaking hands in a business formal setting." />
+                        <h4>Preparing for job interviews</h4>
+                        <p>Advice Girl</p>
+                        <p>66K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Planning an Agile Project">
+                    <article>
+                        <img src="images/videos/agile-planning.png"
+                            alt="An open notebook with the word 'Planning' written and underlined." />
+                        <h4>Planning an Agile Project</h4>
+                        <p>Advice Girl</p>
+                        <p>604K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Don't forget about CSS">
+                    <article>
+                        <img src="images/videos/dont-forget-css.png" alt="An open laptop with some CSS code written." />
+                        <h4>Don't forget about CSS</h4>
+                        <p>How To Anything</p>
+                        <p>34 views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="How to plan for a new project">
+                    <article>
+                        <img src="images/videos/new-project-learning.png"
+                            alt="Someone with a cup of coffee and an open laptop that is displaying an image of a plan for a new project." />
+                        <h4>How to plan for a new project</h4>
+                        <p>How To Anything</p>
+                        <p>77K views</p>
+                    </article>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="How to whiteboard and prepare for whiteboarding interviews">
+                    <article>
+                        <img src="images/videos/mapping-out-ideas.png"
+                            alt="Someone at a whiteboard who appears to be drawing ideas and trying to connect them to create a plan for a project." />
+                        <h4>How to whiteboard and prepare for whiteboarding interviews</h4>
+                        <p>How To Anything</p>
+                        <p>2.5K views</p>
+                    </article>
+                </a>
+            </li>
+        </ul>
     </aside>
     <section class="video-comments">Comments</section>
 </main>
