Added markup and styles for comments section header.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,14 @@
             </li>
         </ul>
     </aside>
-    <section class="video-comments">Comments</section>
+    <section class="video-comments">
+        <header>
+            <h5>Comments &middot; 8</h5>
+            <img class="comment-downtick" src="images/icons/down-tick.svg" alt="Show comments.">
+            <img class="comment-uptick" src="images/icons/up-tick.svg" alt="Show comments.">
+        </header>
+        <div class="comment-list-container">Comment form & list goes here.</div>
+    </section>
 </main>
 
 </html>
