--- a/index.html
+++ b/index.html
@@ -215,5 +215,6 @@
         <div class="comment-list-container">Comment form & list goes here.</div>
     </section>
 </main>
+<script src="script.js"></script>
 
 </html>
