Added markup and styles for the add comment form in the comments section.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,15 @@
             <img class="comment-downtick" src="images/icons/down-tick.svg" alt="Show comments.">
             <img class="comment-uptick" src="images/icons/up-tick.svg" alt="Show comments.">
         </header>
-        <div class="comment-list-container">Comment form & list goes here.</div>
+        <div class="comment-list-container">
+            <div class="comment-form">
+                <img src="images/profiles/stan.jpeg" alt="Stan">
+                <textarea placeholder="Add a public comment."></textarea>
+            </div>
+            <div class="comment-list">
+                Comment list goes here.
+            </div>
+        </div>
     </section>
 </main>
 <script src="script.js"></script>
