Added markup and styles for comments in comment list.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </aside>
     <section class="video-comments">
         <header>
-            <h5>Comments &middot; 8</h5>
+            <h5>Comments &middot; 3</h5>
             <img class="comment-downtick" src="images/icons/down-tick.svg" alt="Show comments.">
             <img class="comment-uptick" src="images/icons/up-tick.svg" alt="Show comments.">
         </header>
@@ -218,7 +218,49 @@
                 <textarea placeholder="Add a public comment."></textarea>
             </div>
             <div class="comment-list">
-                Comment list goes here.
+                <div class="comment my-comment">
+                    <img src="images/profiles/how-to-anything.png" alt="How To Anything">
+                    <a href="#" title="How To Anything">
+                        <span>How To Anything</span>
+                    </a>
+                    <p>I hope you enjoyed the vieo! Let me know what else you would like to know how to do in the
+                        comments. Thanks!
+                    </p>
+                    <div class="comment-statistics">
+                        <p>1 week ago</p>
+                        <p class="comment-status-separator">&middot;</p>
+                        <p>21</p>
+                        <img src="images/icons/thumbs-up-default.svg" alt="Thumbs up">
+                        <img src="images/icons/thumbs-down-default.svg" alt="Thumbs down">
+                    </div>
+                </div>
+                <div class="comment">
+                    <img src="images/profiles/kim.jpeg" alt="Kim O'Neil" />
+                    <a href="#" title="Kim O'Neil">
+                        <span>Kim O'Neil</span>
+                    </a>
+                    <p>Very interesting video. Thank you.</p>
+                    <div class="comment-statistics">
+                        <p>1 day ago</p>
+                        <p class="comment-status-separator">&middot;</p>
+                        <p>3</p>
+                        <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
+                        <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                    </div>
+                </div>
+                <div class="comment">
+                    <img src="images/profiles/douglas.png" alt="Douglas Johannasen" />
+                    <a href="#" title="Douglas Johannasen">
+                        <span>Douglas Johannasen</span>
+                    </a>
+                    <p>I think doing what is in this video is expensive. Any cheaper way?</p>
+                    <div class="comment-statistics">
+                        <p>20 minutes ago</p>
+                        <p class="comment-status-separator">&middot;</p>
+                        <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
+                        <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                    </div>
+                </div>
             </div>
         </div>
     </section>
