Added markup and styles for the see responses and hide responses buttons that are attached to comments with responses. Added javascript to show responses and hide responses when the buttons are clicked.

--- a/index.html
+++ b/index.html
@@ -247,6 +247,19 @@
                         <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
                         <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
                     </div>
+                    <div class="see-response-container">
+                        <button>
+                            <span>See Responses</span>
+                        </button>
+                    </div>
+                    <div class="response-list">
+                        Responses go here.
+                    </div>
+                    <div class="hide-response-container">
+                        <button>
+                            <span>Hide Responses</span>
+                        </button>
+                    </div>
                 </div>
                 <div class="comment">
                     <img src="images/profiles/douglas.png" alt="Douglas Johannasen" />
