Added markup and styles for comment responses. Mobile portrait mode finished.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,20 @@
                         </button>
                     </div>
                     <div class="response-list">
-                        Responses go here.
+                        <div class="response comment">
+                            <img src="images/profiles/stan.jpeg" alt="Stan Watts" />
+                            <a href="#" title="Stan Watts">
+                                <span>Stan Watts</span>
+                            </a>
+                            <p>Definitely learned a lot from this one!</p>
+                            <div class="comment-statistics">
+                                <p>37 minutes ago</p>
+                                <p class="comment-status-separator">&middot;</p>
+                                <p>1</p>
+                                <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
+                                <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                            </div>
+                        </div>
                     </div>
                     <div class="hide-response-container">
                         <button>
@@ -272,6 +285,71 @@
                         <p class="comment-status-separator">&middot;</p>
                         <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
                         <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                    </div>
+                    <div class="see-response-container">
+                        <button>
+                            <span>See responses</span>
+                        </button>
+                    </div>
+                    <div class="response-list">
+                        <div class="response comment my-comment">
+                            <img src="images/profiles/how-to-anything.png" alt="How To Anything" />
+                            <a href="#" title="How To Anything">
+                                <span>How To Anything</span>
+                            </a>
+                            <p>
+                                This is the cheapest way I can see to do it. I think if you go any
+                                cheaper than this you risk having poor quality. If you can't afford everything
+                                right now, maybe start working on a bunch of things you want to talk about, and
+                                save up. Then when you are ready to buy the equipment, you will have a bunch of
+                                material, and you can just start recording immediately. Just a thought :).
+                            </p>
+                            <div class="comment-statistics">
+                                <p>10 minutes ago</p>
+                                <p class="comment-status-separator">&middot;</p>
+                                <p>2</p>
+                                <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
+                                <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                            </div>
+                        </div>
+                        <div class="response comment">
+                            <img src="images/profiles/douglas.png" alt="Douglas Johannasen" />
+                            <a href="#" title="Douglas Johannasen">
+                                <span>Douglas Johannasen</span>
+                            </a>
+                            <p>
+                                Yeah I understand what you are saying, was just hoping to start
+                                it sooner, but never mind.
+                            </p>
+                            <div class="comment-statistics">
+                                <p>6 minutes ago</p>
+                                <p class="comment-status-separator">&middot;</p>
+                                <p>1</p>
+                                <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
+                                <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                            </div>
+                        </div>
+                        <div class="response comment my-comment">
+                            <img src="images/profiles/how-to-anything.png" alt="How To Anything" />
+                            <a href="#" title="How To Anything">
+                                <span>How To Anything</span>
+                            </a>
+                            <p>
+                                Good luck with everything. Wish you all the best.
+                            </p>
+                            <div class="comment-statistics">
+                                <p>Less than a minute ago</p>
+                                <p class="comment-status-separator">&middot;</p>
+                                <p>1</p>
+                                <img src="images/icons/thumbs-up-default.svg" alt="Thumbs Up" />
+                                <img src="images/icons/thumbs-down-default.svg" alt="Thumbs Down" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hide-response-container">
+                        <button>
+                            <span>Hide responses</span>
+                        </button>
                     </div>
                 </div>
             </div>
